@@ -26,8 +26,8 @@
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
-ADDITIONAL_OBJCFLAGS = -Wno-import
-ADDITIONAL_INCLUDE_DIRS = -I../Headers
+ADDITIONAL_OBJCFLAGS += -Wno-import
+ADDITIONAL_INCLUDE_DIRS += -I../Headers
 # If we decide to move away from truncf as a GCC builtin function, it will be
 # mandatory to link C math lib.
 # ADDITIONAL_LDFLAGS = -lm 
@@ -42,6 +42,7 @@ PACKAGE_NAME = IconKit
 ifeq ($(test), yes)
 BUNDLE_NAME = libIconKit
 ADDITIONAL_LDFLAGS += -lUnitKit -lgnustep-gui -lgnustep-base
+ADDITIONAL_CFLAGS += -DHAVE_UKTEST
 else
 LIBRARY_NAME = libIconKit	
 endif
